# xiaozhiTest

./: .cursorindexingignore  .dockerignore  .env.example  .env.prod.example  .env.release.example  .gitignore  Dockerfile  README.md  alembic.ini  mock.http  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
.cursor/rules/: xiaozhi-waimai-deploy.mdc
alembic/: env.py
alembic/versions/: 1a2b3c4d5e6f_add_node_run_artifacts_and_summaries.py  2b3c4d5e6f7a_expand_capability_type_column.py  34439afc1e7c_add_chatbot_skill_bindings.py  5c8c4f5f6f7a_add_identity_and_permissions.py  8c5d9f6b2a31_add_user_api_keys.py  9d1b6c7a8e90_add_session_state_to_node_run.py  a1b2c3d4e5f6_add_wiki_tables.py  a1c2e3d4f5b6_add_chatbot_is_embed_default.py  a3b4c5d6e7f8_drop_wiki_menu_audit_tables.py  a6e2f9c1d4b7_remove_mcp_tool_name.py  a7b8c9d0e1f2_add_tool_call_log.py  a8b9c0d1e2f3_add_sensitive_word_tables.py  b1c2d3e4f5a6_add_external_agent_memory_schedule.py  b2f4e8a1c3d5_add_knowledge_base.py  b3d5f7a9c1e2_add_chatbot_vision_assist_model.py  b4c5d6e7f8a9_add_user_phone_department.py  bfc358b0322e_init_schema.py  (+27 more)
app/: __init__.py  main.py  mock_mcp.py
app/db/: base.py  (+1 more)
deploy/: docker-compose.prod.yml  docker-compose.xiaozhi.yml  nginx.conf
docs/: 小智车机硬件接入文档.md
middleware/: docker-compose.yaml
scripts/: bootstrap_xiaozhi_bot.py  deploy-prod.sh  migrate-prod.sh  mock_mcp.sh  prepare-prod-env.sh  smoke_xiaozhi_http.py
shangou-simulator/: Dockerfile  README.md  main.py  pyproject.toml
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
(+228 files in other folders)
